kajit/src/snapshots/kajit__ir_backend__tests__linear_ir_micro_linear_ir_micro_gamma_u32_x86_64.snap
---
source: kajit/src/ir_backend.rs
expression: out
---
> push rbp
  sub rsp, 0x40
  mov qword [rsp], rbp
  mov qword [rsp + 0x8], rbx
  mov qword [rsp + 0x10], r12
  mov qword [rsp + 0x18], r13
  mov qword [rsp + 0x20], r14
  mov qword [rsp + 0x28], r15
  mov r14, rdi
  mov r15, rsi
  mov r12, qword [r15]
  mov r13, qword [r15 + 0x8]
  mov r10, 0x1
  mov rbx, r10
  jmp $+0x1c
  mov r10, 0xa
  mov rbx, r10
  mov r10, rbx
  mov dword [r14], r10d
  jmp $+0x17
  mov r10, 0x14
  mov rbx, r10
  mov r10, rbx
  mov dword [r14], r10d
  mov qword [r15], r12
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbx, qword [rsp + 0x8]
  mov rbp, qword [rsp]
  add rsp, 0x40
  pop rbp
  ret
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbx, qword [rsp + 0x8]
  mov rbp, qword [rsp]
  add rsp, 0x40
  pop rbp
  ret
