kajit/src/snapshots/kajit__ir_backend__tests__linear_ir_micro_linear_ir_micro_intrinsic_u64_x86_64.snap
---
source: kajit/src/ir_backend.rs
expression: out
---
> push rbp
  sub rsp, 0x40
  mov qword [rsp], rbp
  mov qword [rsp + 0x8], rbx
  mov qword [rsp + 0x10], r12
  mov qword [rsp + 0x18], r13
  mov qword [rsp + 0x20], r14
  mov qword [rsp + 0x28], r15
  mov r14, rdi
  mov r15, rsi
  mov r12, qword [r15]
  mov r13, qword [r15 + 0x8]
  mov r10, 0xb
  mov rbx, r10
  mov r10, 0x7
  mov rdx, r10
  mov r10, 0x5
  mov rsi, r10
  mov qword [r15], r12
  push rbx
  push rdx
  push rsi
  mov rdi, r15
  pop rcx
  pop rdx
  pop rsi
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x3a
  mov rbx, rax
  mov r10, rbx
  mov qword [r14], r10
  mov qword [r15], r12
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbx, qword [rsp + 0x8]
  mov rbp, qword [rsp]
  add rsp, 0x40
  pop rbp
  ret
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbx, qword [rsp + 0x8]
  mov rbp, qword [rsp]
  add rsp, 0x40
  pop rbp
  ret
